python-oq-engine (2.0.0-0~precise01) precise; urgency=low

  [Michele Simionato]
  * Quoted the taxonomies in the CSV exports
  * Fixed a bug in classical_damage and added a master test for it
  * Fixed the escaping of the taxonomies in the datastore
  * Fixed the names of the exported risk files
  * Fixed a segfault in the WebUI when exporting files with h5py >= 2.4
  * Added a command `oq dbserver` to start/stop the database server
  * The engine exports the hazard curves one file per IMT
  * Exported lon and lat with 5 digits after the decimal point
  * Added a command `oq info --build-reports`
  * Introduced experimental support for exporting .hdf5 files

  [Daniele Viganò]
  * Reworked substantially the engine documentation: removed obsolete pages,
    updated to engine 2.0 and added instructions for Windows and Mac OS X
  * Remove oq_create_db script, db is created by the DbServer
  * Move oq_reset_db into utils and clean old code

  [Michele Simionato]
  * Now the DbServer automatically upgrades the database if needed
  * Renamed oq-lite -> oq and added a subcommand `oq engine`
  * Added a CSV reader for the hazard curves
  * Having time_event=None in the hazard part of a calculation is now valid
  * Added an exporter for the rupture data, including the occurrence rate
  * Refactored the CSV exporters
  * Moved celeryconfig.py; now celery must be started with
    `celery worker --config openquake.engine.celeryconfig`
  * Added a default location `~/oqdata/dbserver.log` for the DbServer log
  * Added an early check on the SA periods supported by the GSIMs
  * Now the gsim_logic_tree file is parsed only once
  * Added a document about the architecture of the engine
  * The realizations are now exported as a CSV file
  * Escaped taxonomies in the datastore
  * The Web UI log tool is now escaping the HTML
  * Moved openquake.commonlib.commands -> openquake.commands and
    openquake.commonlib.valid -> openquake.risklib.valid to have a